# ansible-role-openjdk

./: .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.yml  tasks.yml
.github/workflows/: molecule.yml
defaults/: main.yml
meta/: main.yml  requirements.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml
molecule/podman/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
molecule/resources/tests/: test_default.py
molecule/tox/: molecule.yml  requirements.yml
molecule/vbox/: molecule.yml
tasks/: main.yml  tasks.yml
templates/: template.conf.j2
vars/: main.yml
